# py-ubjson

./: CHANGELOG  README.md  pyproject.toml  setup.py
test/: test.py
ubjson/: decoder.py
